fixed scrollbar always displaying

--- a/css/style.css
+++ b/css/style.css
@@ -104,12 +104,18 @@ a:hover {
     margin: auto;
     padding: 0;
     overflow: hidden;
-    overflow-x: scroll;
     background-color: var(--navbar-color);
     max-width: var(--max-width);
     max-height: 50px;
     justify-content: left;
     border-radius: 4px;
+    
+}
+
+@media screen and (max-width: 900px) {
+    .navbar {
+        overflow-x: scroll;   
+    }
 }
 
 .custom-navbar {
